# bamboo-filing-cabinet.github.io

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: .nav.yml  README.md  index.md
docs/catalog/: .nav.yml  README.md
docs/contribute/: README.md
docs/contribute-corrections/: README.md
docs/standards/: README.md  dataset-card-template.yml  licensing-guide.md
