[project]
name = "bamboo-filing-cabinet-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
]
